@@ -836,8 +836,10 @@ remove_reachable_equiv_notes (basic_block bb, struct st_expr *smexpr)
 
   bitmap_clear (visited);
 
-  act = (EDGE_COUNT (ei_container (ei)) > 0 ? EDGE_I (ei_container (ei), 0) : NULL);
-  while (1)
+  act = (EDGE_COUNT (ei_container (ei))
+	 ? EDGE_I (ei_container (ei), 0)
+	 : NULL);
+  for (;;)
     {
       if (!act)
 	{
@@ -879,7 +881,8 @@ remove_reachable_equiv_notes (basic_block bb, struct st_expr *smexpr)
 	      continue;
 
 	    if (dump_file)
-	      fprintf (dump_file, "STORE_MOTION  drop REG_EQUAL note at insn %d:\n",
+	      fprintf (dump_file,
+		       "STORE_MOTION  drop REG_EQUAL note at insn %d:\n",
 		       INSN_UID (insn));
 	    remove_note (insn, note);
 	  }
@@ -893,7 +896,9 @@ remove_reachable_equiv_notes (basic_block bb, struct st_expr *smexpr)
 	  if (act)
 	    stack[sp++] = ei;
 	  ei = ei_start (bb->succs);
-	  act = (EDGE_COUNT (ei_container (ei)) > 0 ? EDGE_I (ei_container (ei), 0) : NULL);
+	  act = (EDGE_COUNT (ei_container (ei))
+		 ? EDGE_I (ei_container (ei), 0)
+		 : NULL);
 	}
     }
 }
