@@ -1,3 +1,8 @@
+2017-05-05  Nathan Sidwell  <nathan@acm.org>
+
+	* store-motion.c (remove_reachable_equiv_notes): Reformat long
+	lines.  Use for (;;).
+
 2017-05-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* config/rs6000/rs6000.c (rs6000_vect_nonmem): New static var.
